Adjust burger menu to fix issues appearing on older microsoft edge browsers. The issue was caused by a font-glyph in the burger menu having strange effects on the spacing. The fix was to recreate the effect of the font glyph with span elements which can be styled and spaced precisely

--- a/src/App.css
+++ b/src/App.css
@@ -82,15 +82,25 @@ button {
     border: 3px solid var(--dark-gold);
     border-radius: 20px;
 }
-.burger-menu {
+
+.burger-menu2 {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    font-size: 3.5rem;
-    padding: 0.75rem 0.25rem 1.6rem;
+    gap: 6px;
     border: 3px solid var(--dark-gold);
-    border-radius: 10px;
-    max-height: 50px;
+    border-radius: 8px;
+    height: 50px;
+    width: 62.5px;
     cursor: pointer;
+    background: none;
+}
+.burger-bar {
+    width: 35px;
+    height: 6px;
+    background-color: var(--dark-gold);
+    border-radius: 2px;
 }
 
 .nav-links {
